<resources>

    <string name="app_name">聚店铺九块九</string>
	<string name="loading">努力加载中...</string>
	<string name="click_reloading">网络不给力啊！点击重新加载</string>
	<string name="exit">退出</string>
	<string name="exit_msg">亲！确定退出聚店铺九块九吗？</string>
	<string name="exit_btn_yes">是的！</string>
	<string name="exit_btn_no">再看看！</string>
	<string name="baoyou9dian9">9.9包邮专区</string>
	<string name="pinpaituan">品牌团</string>
	<string name="home">首页</string>
	<string name="zhuce">注册</string>
	<string name="shangjiabaoming">商家报名</string>
	<string name="sjbm_qq">招商qq：6205164</string>
	<string name="sjbm_phone">招商电话：4000668031</string>
	<string name="close">关闭</string>

</resources>
