<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <WebView
            android:id="@+id/web_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/msg_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:minWidth="150dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/loading_fail_ico" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_reloading"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#888888" />
        </LinearLayout>
    </FrameLayout>

    <ImageView android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#222222"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#292929" >
        
        <RadioGroup
            android:id="@+id/tab_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/radiobtn_1"
                style="@style/main_tab_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:saveEnabled="false"
                android:checked="true"
                android:drawableTop="@drawable/jkjbaoyou"
                android:text="@string/baoyou9dian9" />

            <RadioButton
                android:id="@+id/radiobtn_2"
                style="@style/main_tab_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:saveEnabled="false"
                android:drawableTop="@drawable/pinpai"
                android:text="@string/pinpaituan" />
            
            <RadioButton
                android:id="@+id/radiobtn_3"
                style="@style/main_tab_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:saveEnabled="false"
                android:drawableTop="@drawable/home"
                android:text="@string/home" />
            
            <RadioButton
                android:id="@+id/radiobtn_4"
                style="@style/main_tab_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:saveEnabled="false"
                android:drawableTop="@drawable/pinpai"
                android:text="@string/zhuce" />
            
            <RadioButton
                android:id="@+id/radiobtn_5"
                style="@style/main_tab_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:saveEnabled="false"
                android:drawableTop="@drawable/pinpai"
                android:text="@string/shangjiabaoming" />
            
        </RadioGroup>
        
    </LinearLayout>
    
    <ImageView android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#515151"/>

</LinearLayout>